--- a/src/app/components/Sections/Hero/styles.module.css
+++ b/src/app/components/Sections/Hero/styles.module.css
@@ -1,4 +1,3 @@
-/* Original Hero Styles */
 .hero {
     margin: 48px 0 0 0;
     display: flex;
@@ -242,6 +241,13 @@
     }
 }
 
+
+@media (min-width: 768px) {
+    .heroContent, .heroText{
+        max-width: 420px;
+    }
+}
+
 /* Desktop Styles */
 @media(min-width: 1024px) {
     .hero {
@@ -254,15 +260,16 @@
 
     .heroBox {
         flex-direction: row;
-        gap: 100px;
+        gap: 40px;
     }
 
     .heroContent, .heroText {
         flex-direction: column;
         /* gap: 36px; */
         gap: 28px;
-        max-width: 554px;
+        max-width: 460px;
         overflow: visible;
+        flex-shrink: 0;
     }
 
     .heroTitle {
@@ -327,8 +334,8 @@
 
     .heroVid {
         flex-shrink: 0;
-        padding: 0 20px;
-        max-width: 650px;
+        padding: 0 10px;
+        max-width: 470px;
     }
 
     .vidBox {
@@ -355,6 +362,25 @@
     .heroBgElem img {
         width: 600px;
         height: 100%;
+    }
+}
+
+@media (min-width: 1280px) {
+    .heroBox {
+        gap: 100px;
+    }
+    .heroContent, .heroText {
+        flex-direction: column;
+        /* gap: 36px; */
+        gap: 28px;
+        max-width: 554px;
+        overflow: visible;
+    }
+
+    .heroVid {
+        flex-shrink: 0;
+        padding: 0 20px;
+        max-width: 650px;
     }
 }
 
