--- a/src/app/components/Sections/Milestone/styles.module.css
+++ b/src/app/components/Sections/Milestone/styles.module.css
@@ -215,11 +215,13 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 100px 80px;
+    gap: 60px 10px;
     margin-bottom: 100px;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+
+    overflow: hidden;
   }
 
   .metric {
@@ -268,6 +270,19 @@
 
   .logoPlaceholder img{
     height: 54px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .metrics {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 100px 80px;
+    margin-bottom: 100px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
