--- a/src/app/components/UI/Cards/Catagory/styles.module.css
+++ b/src/app/components/UI/Cards/Catagory/styles.module.css
@@ -58,7 +58,9 @@
 @media (min-width: 768px) {
     .catagory {
         max-width: 500px;
-        padding: 30px;
+        /* padding: 30px; */
+        /* padding: 24px; */
+        padding: 16px;
         border-radius: 16px;
         height: 190px;
     }
