--- a/src/app/components/Sections/Footer/styles.module.css
+++ b/src/app/components/Sections/Footer/styles.module.css
@@ -1,6 +1,6 @@
 .footer {
     margin: 48px 0 70px 0;
-    padding: 48px 10px 0 10px;
+    padding: 48px 20px 0 20px;
     display: flex;
     flex-direction: column;
     gap: 42px;
@@ -57,7 +57,7 @@
 
 .footerInfoTitle {
     padding: 0 0 32px 0;
-    width: 320px;
+    /* width: 320px; */
 
     border-bottom: 1px solid var(--clr-grey-drk);
 }
