--- a/src/app/components/Sections/Navbar/styles.module.css
+++ b/src/app/components/Sections/Navbar/styles.module.css
@@ -3,6 +3,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 12px;
+
+    padding: 0 20px;
 }
 
 .navBox {
@@ -26,7 +28,7 @@
 
 .navLogo .menuBtn {
     position: absolute;
-    left: 16px;
+    left: -20px;
     top: 14px;
 }
 
@@ -49,10 +51,9 @@
 } */
 
 .navLogo .logoImg {
-    width: 210px;
-    height: 48px;
+    width: 180px;
+    height: 42px;
     object-fit: contain;
-    /* margin: 100px 0 28px 0; */
     margin: 24px 0 0 0;
     z-index: 1;
 }
@@ -162,7 +163,7 @@
 }
 
 .mobCtaBox .roundBtn {
-    font-size: var(--fs-p3);
+    font-size: var(--fs-p2);
     color: var(--clr-body);
     font-weight: 700;
     background: var(--gl-d2l);
@@ -172,7 +173,7 @@
 }
 
 .mobCtaBox .txtBtn {
-    font-size: var(--fs-p3);
+    font-size: var(--fs-p2);
     font-weight: 700;
     color: var(--clr-body);
 }
@@ -216,7 +217,8 @@
     left: -100%;
     width: 100%;
     height: 100%;
-    background-color: #BFBFBF;
+    background-color: rgba(255, 255, 255, .25);
+    backdrop-filter: blur(18px);
     z-index: 99999;
 
     display: flex;
@@ -237,8 +239,8 @@
 }
 
 .mobMenuLogo .logoImg {
-    width: 230px;
-    height: 54px;
+    width: 200px;
+    height: 50px;
     object-fit: contain;
 }
 
@@ -271,6 +273,28 @@
     display: flex;
     gap: 36px;
     align-items: baseline;
+}
+
+
+@media (min-width: 425px) {
+    .navLogo .menuBtn {
+        left: -0px;
+        top: 14px;
+    }
+    .navLogo .logoImg {
+        width: 210px;
+        height: 48px;
+        object-fit: contain;
+        /* margin: 100px 0 28px 0; */
+        margin: 24px 0 0 0;
+        z-index: 1;
+    }
+
+    .mobMenuLogo .logoImg {
+        width: 230px;
+        height: 54px;
+        object-fit: contain;
+    }
 }
 
 
@@ -364,13 +388,13 @@
     }
 
     .ctaBox .txtBtn {
-        font-size: var(--fs-p4);
+        font-size: var(--fs-p5);
         font-weight: 700;
         padding: 0 4px;
     }
 
     .ctaBox .roundBtn {
-        font-size: var(--fs-p4);
+        font-size: var(--fs-p5);
         font-weight: 700;
         padding: 12px 24px;
     }
@@ -403,5 +427,21 @@
         max-height: 400px;
         opacity: 1;
         visibility: visible;
+    }
+
+
+    .links a {
+        font-size: var(--fs-p4);
+        color: var(--clr-body);
+        font-weight: 700;
+    }
+
+
+    .ctaBox .txtBtn {
+        font-size: var(--fs-p4);
+    }
+
+    .ctaBox .roundBtn {
+        font-size: var(--fs-p4);
     }
 }
