--- a/src/app/components/Sections/Process/styles.module.css
+++ b/src/app/components/Sections/Process/styles.module.css
@@ -16,6 +16,8 @@
     text-align: center;
     max-width: 320px;
     gap: 30px;
+
+    padding: 0 20px;
 }
 
 .infoTitle {
@@ -29,12 +31,13 @@
     font-size: var(--fs-p1);
     font-weight: 700;
 
-    background: var(--gl-d2l);
+    /* background: var(--gl-d2l);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
     background-clip: text;
-    color: transparent;
+    color: transparent; */
+    color: var(--clr-prime);
 }
 
 .title span {
@@ -72,7 +75,7 @@
 }
 
 .illustration {
-    padding: 0 14px;
+    padding: 0 20px;
 }
 
 .illustration img {
@@ -95,6 +98,7 @@
     .info {
         max-width: 1100px;
         gap: 20px;
+        padding: 0 40px;
     }
 
     .infoTitle {
@@ -113,7 +117,7 @@
 
     .title span {
         font-size: var(--fs-h3);
-        display: inline-block;
+        /* display: inline-block; */
     }
 
     .subtitle {
@@ -133,4 +137,10 @@
         padding: 0 42px;
     }
     
+}
+
+@media (min-width: 1024px) {
+    .title span {
+        display: inline-block;
+    }
 }
