--- a/src/app/components/Sections/Product/styles.module.css
+++ b/src/app/components/Sections/Product/styles.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     gap: 36px;
     justify-content: center;
-    padding: 0 10px;
+    padding: 0 20px;
     text-align: center;
 }
 
@@ -38,13 +38,10 @@
 }
 
 .productTitle h3 span {
-    background: var(--gl-d2l);
+    background: transparent;
     font-weight: 700;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-
-    background-clip: text;
-    color: transparent;
+    -webkit-text-fill-color: var(--clr-prime);
+    color: var(--clr-prime);
 }
 
 .productTitle p {
@@ -136,6 +133,7 @@
         margin: 100px 0 0 0;
         gap: 80px;
         text-align: left;
+        padding: 0 40px;
     }
 
     .productBox {
@@ -143,10 +141,12 @@
         align-items: flex-start;
     }
 
+    
     .productTitle {
         gap: 24px;
-        max-width: 660px;
-        padding: 0 22px;
+        max-width: 100%;
+        text-align: center;
+        padding: 0 0;
     }
 
     .productTitle h3 {
@@ -170,9 +170,33 @@
         color: var(--clr-grey);
     }
 
+    .productContent {
+        max-width: 100%;
+        text-align: center;
+    }
+
+    .prodTagline {
+        margin: auto;
+        text-align: center;
+        max-width: 100%;
+    }
+
+    
+}
+
+
+@media (min-width: 1024px){
+
     .productContentBox {
         display: flex;
         gap: 70px;
+    }
+
+    .productTitle {
+        gap: 24px;
+        max-width: 660px;
+        padding: 0 22px;
+        text-align: left;
     }
 
     .productContent {
@@ -186,6 +210,7 @@
         background: linear-gradient(90deg, #F8F8F8 0%, rgba(248, 248, 248, 0) 100%) padding-box,
               linear-gradient(270deg, rgba(217, 217, 217, 0) 0%, #D9D9D9 100%) border-box;
         border: 2px solid transparent;
+        text-align: left;
     }
 
 
@@ -296,10 +321,7 @@
         font-weight: 500;
         color: var(--clr-body);
     }
-}
 
-
-@media (min-width: 1024px){
     .prodDisplayStatic {
         margin-top: 100px;
     }
