--- a/src/app/components/UI/Form/styles.module.css
+++ b/src/app/components/UI/Form/styles.module.css
@@ -1,5 +1,6 @@
 .form {
-    max-width: 340px;
+    /* max-width: 340px; */
+    width: 100%;
     margin: 0 auto;
     background: var(--clr-black);
     padding: 18px 24px;
@@ -10,7 +11,8 @@
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     gap: 22px;
-    width: 320px;
+    /* width: 320px; */
+    width: 100%;
 }
 
 .formInput {
@@ -146,7 +148,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    width: 320px;
+    /* width: 320px; */
 }
 
 .btnPrime {
