--- a/src/app/components/UI/Form/styles.module.css
+++ b/src/app/components/UI/Form/styles.module.css
@@ -100,6 +100,25 @@
     background-color: transparent;
     color: var(--clr-white);
     font-size: var(--fs-p3);
+
+    /* Prevent text wrapping */
+    white-space: nowrap;
+
+    padding: 0 0 0 12px;
+
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='%23a0a0a0'%3E%3Cpath fill-rule='evenodd' d='M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z' clip-rule='evenodd' /%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 1em;
+    /* padding-right: 20px; */
+
+    /* Safari border */
+    border: 2px solid var(--clr-grey);
+
 }
 
 /* .dropdownMenu {
@@ -227,6 +246,6 @@
 
     .phoneInputContainer select {
         font-size: var(--fs-p5);
-        padding: 0 4px;
+        /* padding: 0 4px; */
     }
 }
